fix: adjust sidebar alignment and size

--- a/src/components/Sidebar/Search/search.module.scss
+++ b/src/components/Sidebar/Search/search.module.scss
@@ -1,5 +1,4 @@
 .searchInput {
     width: 100%;
     padding: 8px 12px;
-    margin-right: 5px;
 }
